--- a/Lab4/CountryApp/app/src/main/res/values/strings.xml
+++ b/Lab4/CountryApp/app/src/main/res/values/strings.xml
@@ -2,9 +2,17 @@
     <string name="app_name">Country Oracle</string>
     <string name="action_settings">Settings</string>
     <string name="default_web_client_id">158372154822-1oo4ifrrc0tabeegt2atqgf3hog1g8jn.apps.googleusercontent.com</string>
-    <string name="welcome_subheader">Ready for some stunning facts about where you are???\nSign in and check in now!</string>
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
         AIzaSyBMaWCxLGZFR6M-kqE_6WRTLK5M3EYwgag
     </string>
+
+    <!-- Welcome Activity -->
+    <string name="welcome_header">LocationFAQ</string>
+    <string name="welcome_details">Get interesting facts</string>
+    <string name="welcome_details2">Take pictures and store them online</string>
+    <string name="welcome_details3">All based on your current location!</string>
+    <string name="loginBtn">Login</string>
+    <string name="loginGoogleBtn">Login with Google</string>
+    <string name="registerBtn">Register</string>
 </resources>
 
