--- a/Lab4/CountryApp/app/src/main/res/values/strings.xml
+++ b/Lab4/CountryApp/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Country Oracle</string>
+    <string name="app_name">LocationFAQ</string>
     <string name="action_settings">Settings</string>
     <string name="default_web_client_id">158372154822-1oo4ifrrc0tabeegt2atqgf3hog1g8jn.apps.googleusercontent.com</string>
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
